--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
   border: 2px solid white;"><p><button class="GFG" onclick="window.location.href = 'romantic.html';">Romantic Songs
   </button></p>
   </div>
-  <div class="column" style="background-image: url('Sad_Song.jpg');
+  <div class="column" style="background-image: url('Sad_song.jpg');
   background-size: cover;
   border: 2px solid white;"><p><button class="GFG" onclick="window.location.href = 'sad.html';">Sad Songs
   </button></p>
   </div>
- <div class="column" style="background-image: url('bolly_Song.jpg');
+ <div class="column" style="background-image: url('bolly_song.jpg');
   background-size: cover;
   border: 2px solid white;"><p><button class="GFG" onclick="window.location.href = 'bollywood.html';">
   Bollywood  Songs</button></p>
   </div>
- <div class="column" style="background-image: url('holly_Song.jpeg');
+ <div class="column" style="background-image: url('holly_song.jpeg');
   background-size: cover;
   border: 2px solid white;"><p><button class="GFG" onclick="window.location.href = 'hollywood.html';">
   Hollywood Songs </button></p>
